[package]
name = "twembeddings"
version = "0.1.0"
authors = [
  "bmaz <beatrice.mazoyer@sciencespo.fr",
  "Yomguithereal <guillaume.plique@sciencespo.fr>"
]
edition = "2018"

[dependencies]
bitintr = "0.3.0"
clap = "3.0.0-beta.2"
chrono = "0.4.19"
chrono-tz = "0.4"
compound_duration = "1.2.0"
csv = "1.1"
indicatif = "0.16.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
rayon = "1.5"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
sparseset = "1.0.0"
tab-hash = "0.3.0"
unidecode = "0.3.0"
